2004-07-27  Jeff Martin  <jeff@custommonkey.org>

	* cong-spell.c, cong-spell.h, cong-util.h:

	Added basic spelling implmentation based on enchant

2004-07-27  Michele Garoche <michele.garoche@easyconnect.fr>

	* cong-document.c, cong-file-new.c:

	More strings to be translated.

2004-07-27  David Malcolm  <dmalcolm@redhat.com>

	* cong-plugin.c, cong-plugin.h, cong-util.c, global.h, plugin-docbook.c: 

	Added CongStylesheetParameter type and dummy code to handle this
	when exporting PDFs and XSL:FO files.

	* xmlload.c: 

	Removed contents of this file: dead code

2004-07-27  Geert Stappers  <stappers@stappers.nl>

	* cong-menus.c:

	Use cong_document_get_root_element(cong_doc); instead
	of cong_document_get_root(cong_doc); to get linked
	with debug menu enabled.

>>>>>>> 1.671
2004-07-26  David Malcolm  <dmalcolm@redhat.com>

	* cong-menus.c: 

	Removed translation markers for debug menus; added stubbed option
	to debug menu for debugging spell-checking support

	* Makefile.am, cong-spell.h, cong-spell.c: 

	Added files to handle spell-checking support

2004-07-23  Jeff Martin  <jeff@custommonkey.org>

	* cong-util.c

	Fixed typo, xmls changed to xmlns in cong_element_description_make_user_name

2004-07-22  Geert Stappers  <stappers@stappers.nl>

	* plugin-docbook.c:
	
	Give the initial article a section, so the next sections
	can be inserted. This is for bugzilla bugreport #148117.

2004-07-18  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-util.c: 

	Make all spell-checking return without errors for now

	* cong-document.c (cong_document_get_language_for_node): 

	Implemented this function, with support for the standard xml:lang, and for DocBook's lang attribute

	* cong-editor-widget3.c, cong-location.c, cong-location.h, cursor.c:

	Rewrite of CongLocation methods to work better with the new multiple dispspec model: everything uses a CongDocument rather than a CongDispspec now

	* cong-dispspec.c, cong-dispspec.h: 
